# thought-stack

./: .gitignore  AGENTS.md  OPENCLAW_WRITE_TEST.txt  README.md  config.json  debug-search.cjs  electron-builder.yml  package-lock.json  package.json  playwright.config.ts  test_fts.mjs  thoughtrepo.service  tsconfig.json  vitest.config.ts
.github/workflows/: build-desktop-mobile.yml  build-macos.yml  deploy-pages.yml
docs/: build-number.md
electron/: config.ts  main.ts  preload.ts  tsconfig.json
electron/index/: index.ts
electron/ipc/: conflicts.ipc.ts  images.ipc.ts  notebooks.ipc.ts  notes.ipc.ts  search.ipc.ts  system.ipc.ts  tags.ipc.ts
electron/migration/: migrate.ts  tiptap-to-markdown.ts
electron/vault/: conflicts.ts  export.ts  ignore.ts  images.ts  import.ts  index.ts  markdown.ts  notebooks.ts  notes.ts  retry.ts  sanitize.ts  trash.ts
scripts/: add-cto-prompt.ts  import-notion.ts  increment-build.js  migrate-vault.ts  run-migration.mjs  seed-ai-prompts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/vault/: conflicts.rs  ignore.rs  images.rs  markdown.rs  mod.rs  notebooks.rs  notes.rs  sanitize.rs  search.rs  settings.rs  trash.rs
src/client/: App.tsx  build-info.ts  index.html  main.tsx  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
src/server/: app.ts  index.ts  package.json  tsconfig.json
tests/: mobile-notes.spec.ts  mock-vault.js
tests/helpers/: db.ts  electron-api-mock.ts
tests/integration/: vault-operations.test.ts
(+72 files in other folders)
