[package]
name = "thoughtstack"
version = "1.0.0"
description = "A note-taking app with Markdown flat-file storage"
authors = []
edition = "2021"

[lib]
name = "thoughtstack_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
gray_matter = "0.2"
regex = "1"
dirs = "5"
thiserror = "1"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
